--- a/Fluid.xcodeproj/xcshareddata/xcschemes/Fluid.xcscheme
+++ b/Fluid.xcodeproj/xcshareddata/xcschemes/Fluid.xcscheme
@@ -29,6 +29,18 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "7CDB0A1F2F3C4D5600FB7CAD"
+               BuildableName = "FluidDictationIntegrationTests.xctest"
+               BlueprintName = "FluidDictationIntegrationTests"
+               ReferencedContainer = "container:Fluid.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Release"
